--- a/src/Sample/.circleci/config.yml
+++ b/src/Sample/.circleci/config.yml
@@ -37,17 +37,17 @@ jobs:
       # # run tests!
       # - run: phpunit
 
-deployment:
-  staging:
-    branch: master
-    codedeploy:
-      CodeDeploySampleApplication:
-        application_root: /
-        region: ap-northeast-1
-        revision_location:
-          revision_type: S3
-          s3_location:
-            bucket: chiba-app
-            key_pattern: CodeDeploySampleApplication-{BRANCH}-{SHORT_COMMIT}
-        deployment_group: DemoFleet
-        deployment_config: CodeDeployDefault.AllAtOnce
+  deploy:
+    staging:
+      branch: master
+      codedeploy:
+        CodeDeploySampleApplication:
+          application_root: /
+          region: ap-northeast-1
+          revision_location:
+            revision_type: S3
+            s3_location:
+              bucket: chiba-app
+              key_pattern: CodeDeploySampleApplication-{BRANCH}-{SHORT_COMMIT}
+          deployment_group: DemoFleet
+          deployment_config: CodeDeployDefault.AllAtOnce
