--- a/src/Sample/.circleci/config.yml
+++ b/src/Sample/.circleci/config.yml
@@ -37,17 +37,36 @@ jobs:
       # # run tests!
       # - run: phpunit
 
+  # deploy:
+  #   staging:
+  #     branch: master
+  #     codedeploy:
+  #       CodeDeploySampleApplication:
+  #         application_root: /
+  #         region: ap-northeast-1
+  #         revision_location:
+  #           revision_type: S3
+  #           s3_location:
+  #             bucket: chiba-app
+  #             key_pattern: CodeDeploySampleApplication-{BRANCH}-{SHORT_COMMIT}
+  #         deployment_group: DemoFleet
+  #         deployment_config: CodeDeployDefault.AllAtOnce
+
+
+jobs:
   deploy:
-    staging:
-      branch: master
-      codedeploy:
-        CodeDeploySampleApplication:
-          application_root: /
-          region: ap-northeast-1
-          revision_location:
-            revision_type: S3
-            s3_location:
-              bucket: chiba-app
-              key_pattern: CodeDeploySampleApplication-{BRANCH}-{SHORT_COMMIT}
-          deployment_group: DemoFleet
-          deployment_config: CodeDeployDefault.AllAtOnce
+    # working_directory: ~/repo
+    working_directory: /src
+    environment:
+      - AWS_DEFAULT_REGION: ap-northeast-1
+      - CODE_DEPLOY_S3_BUCKET_NAME: chiba-app
+      - CODE_DEPLOY_APPLICATION_NAME: CodeDeploySampleApplication
+      - CODE_DEPLOY_GROUP_NAME: CodeDeploySampleDeployGroup
+      # - APP_DIR: .
+      - APP_DIR: ./src
+    docker:
+      - image: innovatorjapan/awscli:latest
+    steps:
+      - attach_workspace:
+          at: .
+      - run: sh /bin/aws-s3-deploy
