[update] circleci のconfig.ymlを修正

--- a/src/Sample/.circleci/config.yml
+++ b/src/Sample/.circleci/config.yml
@@ -53,7 +53,7 @@ jobs:
   #         deployment_config: CodeDeployDefault.AllAtOnce
 
 
-jobs:
+# jobs:
   deploy:
     # working_directory: ~/repo
     working_directory: /src
