[update] lsをもう一個追加

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,6 +24,7 @@ jobs:
       # - run: bundle exec rake deploy
       - run: ls
       - run: cd src/Sample
+      - run: ls
       - run: composer update
       - run: php artisan deploy:exec
 
