[test] circleci/config.ymlを修正

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ jobs:
       #     name: Run Test
       #     command: bundle exec rspec
   deploy: #デプロイするジョブ
-    working_directory: /workspace
+    working_directory: /src/Sample
     docker:
       # - image: ruby:2.4.0
       - image: circleci/php:7.1-browsers
@@ -23,8 +23,8 @@ jobs:
       # - run: bundle install --path vendor/bundle
       # - run: bundle exec rake deploy
       # - run: ls
-      - run: cd src/Sample
-      - run: ls
+      # - run: cd src/Sample
+      # - run: ls
       - run: composer update
       # - run: php /workspace/src/Sample artisan deploy:exec
       - run: bash vendor/bin/aws-code-deploy.sh
