--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,7 +19,7 @@ jobs:
       AWS_CODE_DEPLOY_APPLICATION_NAME: "CodeDeploySampleApplication"
       AWS_CODE_DEPLOY_DEPLOYMENT_CONFIG_NAME: CodeDeployDefault.AllAtOnce
       AWS_CODE_DEPLOY_DEPLOYMENT_GROUP_NAME: "CodeDeploySampleDeployGroup"
-      # AWS_CODE_DEPLOY_SERVICE_ROLE_ARN: "arn:aws:iam::XXXXXXXXXXXXX:role/my-company-codedeploy"
+      AWS_CODE_DEPLOY_SERVICE_ROLE_ARN: "arn:aws:iam::167461194196:role/CodeDeployRole"
       # AWS_CODE_DEPLOY_EC2_TAG_FILTERS: "Key=Type,Value=www,Type=KEY_AND_VALUE"
       # AWS_CODE_DEPLOY_APP_SOURCE: $HOME/deploy
       AWS_CODE_DEPLOY_APP_SOURCE: src/Sample
