[test] code deployテスト11

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,7 +22,7 @@ jobs:
       AWS_CODE_DEPLOY_SERVICE_ROLE_ARN: "arn:aws:iam::167461194196:role/CodeDeployRole"
       # AWS_CODE_DEPLOY_EC2_TAG_FILTERS: "Key=Type,Value=www,Type=KEY_AND_VALUE"
       # AWS_CODE_DEPLOY_APP_SOURCE: $HOME/deploy
-      AWS_CODE_DEPLOY_APP_SOURCE: $HOME/src/Sample
+      AWS_CODE_DEPLOY_APP_SOURCE: ~/src/Sample
       AWS_CODE_DEPLOY_S3_FILENAME: "${CIRCLE_BUILD_NUM}#${CIRCLE_SHA1:0:7}.zip"
       AWS_CODE_DEPLOY_S3_BUCKET: chiba-app
       AWS_CODE_DEPLOY_S3_KEY_PREFIX: /www
