[test] code deployテスト14

--- a/appspec.yml
+++ b/appspec.yml
@@ -2,7 +2,7 @@ version: 0.0
 os: linux
 files:
   - source: /
-    destination: ~/src/Sample
+    destination: /var/www/html2
 hooks:
   BeforeInstall:
     - location: scripts/install_dependencies.sh
