--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,7 @@ jobs:
       # - run:
       #     name: Run Test
       #     command: bundle exec rspec
-      
+
   deploy: #デプロイするジョブ
     working_directory: ~/circleci-workflows
     environment:
@@ -23,7 +23,8 @@ jobs:
       AWS_CODE_DEPLOY_SERVICE_ROLE_ARN: "arn:aws:iam::167461194196:role/CodeDeployRole"
       # AWS_CODE_DEPLOY_EC2_TAG_FILTERS: "Key=Type,Value=www,Type=KEY_AND_VALUE"
       # AWS_CODE_DEPLOY_APP_SOURCE: $HOME/deploy
-      AWS_CODE_DEPLOY_APP_SOURCE: /home/circleci/circleci-workflows/src/Sample
+      # AWS_CODE_DEPLOY_APP_SOURCE: /home/circleci/circleci-workflows/src/Sample
+      AWS_CODE_DEPLOY_APP_SOURCE: "$HOME/deploy/src/Sample"
       AWS_CODE_DEPLOY_S3_FILENAME: "${CIRCLE_BUILD_NUM}#${CIRCLE_SHA1:0:7}.zip"
       AWS_CODE_DEPLOY_S3_BUCKET: chiba-app
       AWS_CODE_DEPLOY_S3_KEY_PREFIX: /www
@@ -59,6 +60,13 @@ jobs:
 
       # - run: php /workspace/src/Sample artisan deploy:exec
       # - run: bash vendor/bin/aws-code-deploy.sh
+
+      - run:
+          name: deploy source git pull
+          command: |
+            mkdir deploy
+            cd deploy
+            bash git clone https://github.com/okamok/laravel-crud-sample.git
 
       - run:
           name: code deploy exec
