--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,7 +24,7 @@ jobs:
       # AWS_CODE_DEPLOY_EC2_TAG_FILTERS: "Key=Type,Value=www,Type=KEY_AND_VALUE"
       # AWS_CODE_DEPLOY_APP_SOURCE: $HOME/deploy
       # AWS_CODE_DEPLOY_APP_SOURCE: /home/circleci/circleci-workflows/src/Sample
-      AWS_CODE_DEPLOY_APP_SOURCE: "$HOME/deploy/Sample"
+      AWS_CODE_DEPLOY_APP_SOURCE: "/home/circleci/circleci-workflows/deploy/Sample"
       AWS_CODE_DEPLOY_S3_FILENAME: "${CIRCLE_BUILD_NUM}#${CIRCLE_SHA1:0:7}.zip"
       AWS_CODE_DEPLOY_S3_BUCKET: chiba-app
       AWS_CODE_DEPLOY_S3_KEY_PREFIX: /www
