--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,20 +51,11 @@ jobs:
       #
 
 
-
       # - run:
-      #     name: copy deploy source
+      #     name: composer update
       #     command: |
-      #       cp -r "/home/circleci/circleci-workflows/src/Sample" "/home/circleci/circleci-workflows/deploy"
-      #
-      #
-
-
-      - run:
-          name: composer update
-          command: |
-            cd src/Sample
-            composer update
+      #       cd src/Sample
+      #       composer update
 
       # - run: pwd
       # - run: ls
@@ -82,11 +73,23 @@ jobs:
       #       cd deploy
       #       bash git clone https://github.com/okamok/laravel-crud-sample.git
 
+      # - run:
+      #     name: code deploy exec
+      #     command: |
+      #       cd src/Sample
+      #       bash vendor/bin/aws-code-deploy.sh
+
+
+
       - run:
-          name: code deploy exec
+          name: copy deploy source
           command: |
+            cp -r "/home/circleci/circleci-workflows/src/Sample" "/home/circleci/circleci-workflows/deploy"
             cd src/Sample
+            composer update
             bash vendor/bin/aws-code-deploy.sh
+
+
 
 
 workflows:
